// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template List Components DeleteAction should render correctly 1`] = `
<Button
  className=""
  flat={true}
  onClick={[Function]}
>
  <Delete
    size={16}
  />
  <ScreenReaderOnly>
    Delete Template
  </ScreenReaderOnly>
</Button>
`;

exports[`Template List Components DuplicateAction should render correctly 1`] = `
<Button
  className=""
  flat={true}
  onClick={[Function]}
>
  <ContentCopy
    size={16}
  />
  <ScreenReaderOnly>
    Duplicate Template
  </ScreenReaderOnly>
</Button>
`;

exports[`Template List Components LastUpdated should render 1`] = `
<p>
  Aug 10 2017, 10:15am
</p>
`;

exports[`Template List Components Name should render 1`] = `
<Fragment>
  <strong>
    <Text
      as="span"
      fontWeight="400"
    >
      <PageLink
        to="/templates/edit/id-123/draft/content?subaccount=123"
      >
        template name
      </PageLink>
    </Text>
  </strong>
</Fragment>
`;

exports[`Template List Components Status should render draft 1`] = `
<Tag>
  <Edit />
   
  <span>
    Draft
  </span>
</Tag>
`;

exports[`Template List Components Status should render published 1`] = `
<Tag>
  <CheckCircle />
   
  <span>
    Published
  </span>
</Tag>
`;

exports[`Template List Components Status should render unpublished changes 1`] = `
<Tooltip
  content="Contains unpublished changes"
  dark={true}
  id="templates-status-3"
>
  <Tag>
    <CheckCircle />
     
    <span>
      Published
    </span>
  </Tag>
</Tooltip>
`;
